# bvh

./: .gitignore  README.md  build.py  meson.build  pyproject.toml
.github/workflows/: poetry-build.yml
bvh/: __init__.py  _bvh.pyx  aabb.h  acoustics.h  bvh.h  bvh_pyapi.h  closest_point.h  core.h  defines.h  distance.h  helpers.h  interval.h  mesh.h  moller.h  prims.h  raycast.h  raycast_eigen.h  reflection.h  serialization.h  serialization.pxd  serialization.pyx  typecodes.h  vec.h
bvh/utils/: alloca.h
examples/: echo_compute.cpp  meson.build
examples/acoustic_simulation/: main.py
examples/clip_cloud/: clipmesh.json  main.py  requirenments.txt
src/: aabb.h  bvh.h  moller.h  prims.h  raycast.h  vec.h
src/prims/: prims.h  ray.h  segm.h  tri.h
tests/: meson.build  test_aabb.cpp  test_bvh.cpp  test_inputs_direction.txt  test_inputs_start.txt  test_inputs_triangles.txt  test_mesh.cpp  test_outputs_counts.txt  test_outputs_pts.txt  test_py_raycast.py  test_raycast.cpp  test_raycast_eigen.cpp  test_vec.cpp  utils.h
