[build-system]
requires = ["poetry-core>=1.0,<2.0", "cython", "numpy", "setuptools", "pytest>8.3.2", "pyMSVC;sys_platform=='win32'"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'

[tool.poetry]
name = "bvh"
version = "1.2.0"
description = "bvh"
authors = ["Andrew Astakhov <sthv.developer@gmail.com>", ]
readme = "README.md"
include = [
    "*.so",
    "*.pyd",
    "*.dll",
    "*.dylib",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
cython = "*"
cython-lint = "*"
setuptools="*"




