[build-system]
requires = [ "poetry-core>=1.9.0", "cython", "numpy>=2.3.0", "setuptools", "pyMSVC==0.5.4;sys_platform=='win32'","comtypes==1.1.11;sys_platform=='win32'" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'

[tool.poetry]
name = "bvh"
version = "1.3.1"
description = "bvh"
authors = ["Andrew Astakhov <sthv.developer@gmail.com>", ]
readme = "README.md"
include = [
    "*.so",
    "*.pyd",
    "*.dll",
    "*.dylib",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
cython = "*"
cython-lint = "*"
setuptools="*"




