[build-system]
requires = [
  "poetry-core>=1.9.0",
  "setuptools",
  "Cython",

  "numpy==2.0.2; python_version < '3.13'",
  "numpy>=2.1.0; python_version >= '3.13'",

  "pyMSVC==0.5.4; sys_platform=='win32'",
  "comtypes==1.1.11; sys_platform=='win32'",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'

[tool.poetry]
name = "bvh"
version = "1.3.1"
description = "bvh"
authors = ["Andrew Astakhov <sthv.developer@gmail.com>", ]
readme = "README.md"
include = [
    "*.so",
    "*.pyd",
    "*.dll",
    "*.dylib",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = [{ version = "2.0.2", markers = "python_version <= '3.12'" },
    { version = "^2.1.0", markers = "python_version >= '3.13'", allow-prereleases = true },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
cython = "*"
cython-lint = "*"
setuptools="*"




