

echo_compute = executable('echo-compute',
                         sources:['echo_compute.cpp'],
                         include_directories : my_inc,
                         install : false,
                         dependencies: [openmp_dep,eigen_dep],

                         link_args:link_args
)

