# test_vec
test_vec = executable('test_vec',
               'test_vec.cpp',
               include_directories : my_inc,
               install : false
)
test('test_vec',
     test_vec)

# test_bvh
test_bvh = executable('test_bvh',
                       'test_bvh.cpp',
                       include_directories : my_inc,
                       install : false
)
test('test_bvh',
     test_bvh)

